; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ath/ath_hal/ar5210/extr_ar5210_xmit.c_ar5210IntrReqTxDesc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ath/ath_hal/ar5210/extr_ar5210_xmit.c_ar5210IntrReqTxDesc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ath_hal = type { i32 }
%struct.ath_desc = type { i32 }
%struct.ar5210_desc = type { i32 }

@AR_TxInterReq = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ar5210IntrReqTxDesc(%struct.ath_hal* %0, %struct.ath_desc* %1) #0 {
  %3 = alloca %struct.ath_hal*, align 8
  %4 = alloca %struct.ath_desc*, align 8
  %5 = alloca %struct.ar5210_desc*, align 8
  store %struct.ath_hal* %0, %struct.ath_hal** %3, align 8
  store %struct.ath_desc* %1, %struct.ath_desc** %4, align 8
  %6 = load %struct.ath_desc*, %struct.ath_desc** %4, align 8
  %7 = call %struct.ar5210_desc* @AR5210DESC(%struct.ath_desc* %6)
  store %struct.ar5210_desc* %7, %struct.ar5210_desc** %5, align 8
  %8 = load i32, i32* @AR_TxInterReq, align 4
  %9 = load %struct.ar5210_desc*, %struct.ar5210_desc** %5, align 8
  %10 = getelementptr inbounds %struct.ar5210_desc, %struct.ar5210_desc* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = or i32 %11, %8
  store i32 %12, i32* %10, align 4
  ret void
}

declare dso_local %struct.ar5210_desc* @AR5210DESC(%struct.ath_desc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
